# merge-redux

./: .gitignore  README.md  pyproject.toml  simple.json  stepbystep.md  testnotes.md  todo.md
.github/workflows/: tests.yml
_archive/: example.py  run.py  testing-simple.py  testing.py  walkthrough.py  worked_simple.py
src/merge_redux/: __init__.py  core.py  run.py  util.py
tests/: test_merge_redux.py
